--- a/resources/postcode.ipynb
+++ b/resources/postcode.ipynb
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "77758d7e",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>postcode</th>\n",
        "      <th>locality</th>\n",
        "      <th>state</th>\n",
@@ -498,52 +497,47 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>200</td>\n",
-       "      <td>ANU</td>\n",
-       "      <td>ACT</td>\n",
-       "      <td>149.119000</td>\n",
-       "      <td>-35.277700</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>SYDNEY</td>\n",
+       "      <td>NSW</td>\n",
+       "      <td>151.268071</td>\n",
+       "      <td>-33.794883</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>200</td>\n",
-       "      <td>Australian National University</td>\n",
-       "      <td>ACT</td>\n",
-       "      <td>149.118900</td>\n",
-       "      <td>-35.277700</td>\n",
+       "      <td>1002</td>\n",
+       "      <td>SYDNEY</td>\n",
+       "      <td>NSW</td>\n",
+       "      <td>151.268071</td>\n",
+       "      <td>-33.794883</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>800</td>\n",
-       "      <td>DARWIN</td>\n",
-       "      <td>NT</td>\n",
-       "      <td>130.836680</td>\n",
-       "      <td>-12.458684</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>SYDNEY</td>\n",
+       "      <td>NSW</td>\n",
+       "      <td>151.268071</td>\n",
+       "      <td>-33.794883</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>801</td>\n",
-       "      <td>DARWIN</td>\n",
-       "      <td>NT</td>\n",
-       "      <td>130.836680</td>\n",
-       "      <td>-12.458684</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>SYDNEY</td>\n",
+       "      <td>NSW</td>\n",
+       "      <td>151.268071</td>\n",
+       "      <td>-33.794883</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>804</td>\n",
-       "      <td>PARAP</td>\n",
-       "      <td>NT</td>\n",
-       "      <td>130.873315</td>\n",
-       "      <td>-12.428017</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>SYDNEY</td>\n",
+       "      <td>NSW</td>\n",
+       "      <td>151.268071</td>\n",
+       "      <td>-33.794883</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -551,35 +545,71 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  postcode                        locality state        long  \\\n",
-       "0           0       200                             ANU   ACT  149.119000   \n",
-       "1           1       200  Australian National University   ACT  149.118900   \n",
-       "2           2       800                          DARWIN    NT  130.836680   \n",
-       "3           3       801                          DARWIN    NT  130.836680   \n",
-       "4           4       804                           PARAP    NT  130.873315   \n",
-       "\n",
-       "         lat Category  \n",
-       "0 -35.277700      NaN  \n",
-       "1 -35.277700      NaN  \n",
-       "2 -12.458684      NaN  \n",
-       "3 -12.458684      NaN  \n",
-       "4 -12.428017      NaN  "
+       "   postcode locality state        long        lat Category\n",
+       "0      1001   SYDNEY   NSW  151.268071 -33.794883      NaN\n",
+       "1      1002   SYDNEY   NSW  151.268071 -33.794883      NaN\n",
+       "2      1003   SYDNEY   NSW  151.268071 -33.794883      NaN\n",
+       "3      1004   SYDNEY   NSW  151.268071 -33.794883      NaN\n",
+       "4      1005   SYDNEY   NSW  151.268071 -33.794883      NaN"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "second_postcode_data = pd.read_csv('second_postcode.csv')\n",
-    "second_postcode_data.head()"
+    "#read the csv file only have nsw and vic data\n",
+    "postcode_data = pd.read_csv('nsw&vic_postcode.csv')\n",
+    "postcode_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1c81c47d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to convert a CSV to JSON\n",
+    "# Takes the file paths as arguments\n",
+    "def make_json(csvFilePath, jsonFilePath):\n",
+    "     \n",
+    "    # create a array\n",
+    "    data = []\n",
+    "     \n",
+    "    # Open a csv reader called DictReader\n",
+    "    with open(csvFilePath, encoding='utf-8') as csvf:\n",
+    "        csvReader = csv.DictReader(csvf)\n",
+    "         \n",
+    "        # Convert each row into a dictionary\n",
+    "        # and add it to data\n",
+    "        for rows in csvReader:\n",
+    "            \n",
+    "            data.append(rows)\n",
+    "             \n",
+    " \n",
+    " \n",
+    "    # Open a json writer, and use the json.dumps()\n",
+    "    # function to dump data\n",
+    "    with open(jsonFilePath, 'w', encoding='utf-8') as jsonf:\n",
+    "        jsonf.write(json.dumps(data, indent=4))\n",
+    "         \n",
+    "# Driver Code\n",
+    " \n",
+    "# Decide the two file paths according to your\n",
+    "# computer system\n",
+    "csvFilePath = r'nsw&vic_postcode.csv'\n",
+    "jsonFilePath = r'final.json'\n",
+    " \n",
+    "# Call the make_json function\n",
+    "make_json(csvFilePath, jsonFilePath)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c81c47d",
+   "id": "f74e8481",
    "metadata": {},
    "outputs": [],
    "source": []
